# soci

./: .gitignore  CMakeLists.txt  soci.spec
backends/mysql/: session.cpp
backends/sqlite3/: standard-into-type.cpp
cmake/: SociBackend.cmake
core/: backend-loader.cpp
include/soci/: ref-counted-statement.h  soci-config.h.in
src/backends/sqlite3/: statement.cpp
src/core/: CMakeLists.txt  backend-loader.cpp
